# OpenTimelineIO

./: .gitignore  CMakeLists.txt  TYPESCRIPT_BUILD.md  debug_test.html  otio.js  otio.wasm  test_oop_api.html  test_otio_only.html  test_timeline_operations.html  test_typescript_bindings.html
docs/tutorials/: otio-serialized-schema-only-fields.md  otio-serialized-schema.md
examples/: typescript_example.ts
src/opentime/: CMakeLists.txt  rational.h
src/opentimelineio/: CMakeLists.txt  CORE_VERSION_MAP.cpp  composition.cpp  deserialization.cpp  effect.h  item.h  serializableObject.h  serialization.cpp  transformEffects.cpp  transformEffects.h  typeRegistry.cpp  typeRegistry.h  version.h
src/py-opentimelineio/opentime-bindings/: CMakeLists.txt  opentime_rational.cpp
src/py-opentimelineio/opentimelineio-bindings/: CMakeLists.txt  otio_rational.h  otio_serializableObjects.cpp
src/py-opentimelineio/opentimelineio/schema/: __init__.py
src/ts-opentimelineio/: CMakeLists.txt  README.md  anyDictionaryProxy.h  otio_error_status.cpp  otio_ts_bindings.cpp  otio_ts_bindings.h
src/ts-opentimelineio/opentime-bindings/: CMakeLists.txt  opentime_bindings.cpp  opentime_bindings.h
src/ts-opentimelineio/opentimelineio-bindings/: CMakeLists.txt  full_working_bindings.cpp  minimal_test.cpp  opentime_only_bindings.cpp  opentimelineio_bindings.cpp  otio_bindings.cpp  otio_bindings.h  otio_bindings_test.cpp  otio_serializableObjects.cpp  otio_simple_test.cpp  otio_ts_bindings.cpp  otio_with_handles.cpp  simple_working_test.cpp
src/ts-opentimelineio/typescript/: .npmrc  README.md  complete_wrappers.js  index.d.ts  index.js  package.json  wrappers.js  wrappers.ts
src/ts-opentimelineio/typescript/scripts/: copy-build-files.js
tests/: CMakeLists.txt  test_casting.cpp  test_clip.cpp  test_opentime.js  test_serialization.cpp  test_transform_effects.cpp  test_transform_effects.py
tests-web/: CMakeLists.txt  README.md  demo_working_system.html  global-setup.ts  index.html  opentimelineio.js  opentimelineio.wasm  package-lock.json  package.json  playwright.config.ts  setup.sh  test-setup.js  test_complete_otio.html  test_composition.html  test_e2e_comprehensive.html  test_effect_bindings.html  test_opentime_working.html  test_simple_fix.html  test_timeline_operations.html  test_typescript_bindings.html  tsconfig.json
tests-web/helpers/: module-loader.ts  module-loader.ts.in
tests-web/tests/: anydictionary.spec.ts  clip.spec.ts  composable.spec.ts  composition.spec.ts  e2e-comprehensive.spec.ts  effect.spec.ts  item.spec.ts  marker.spec.ts  mediareference.spec.ts  so.spec.ts  sowithmeta.spec.ts  stack.spec.ts  time.spec.ts  timeline.spec.ts  typescript-bindings.spec.ts
tests-web/tests/utils/: test-helpers.ts
